# TerribleChessClone

./: CMakeLists.txt  README.md
headers/: Board.h  Game.h  Piece.h
include/: Bishop.h  Board.h  ColorPalette.h  Game.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  UI_Button.h
src/: Bishop.cpp  Board.cpp  ColorPalette.cpp  Game.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  UI_Button.cpp  main.cpp
test/: TestBoard.cpp  TestFiles.cpp
